checkbox and control empty entry

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         </div>
 
         <div id="items-list" class="container__body">
-            <div class="item">
+            <div class="item" style="display: none;">
                 <div class="item__detail">
                     <h2 class="item__detail__title">a sample task</h2>
                 </div>
 
                 <div class="item__controls">
-                    <input class="item__controls--input" id="done" type="checkbox">
+                    <input class="item__controls--input" type="checkbox">
                     <i class="fa-solid fa-ellipsis-vertical"></i>
                 </div>
             </div>
